--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
         @media (max-width: 768px) {
             .header h1 {
-                font-size: 1.8rem;
+                font-size: 20px;
             }
 
             .nav {
