--- a/admin.html
+++ b/admin.html
@@ -302,7 +302,8 @@
 
     <script>
         // НАЛАШТУВАННЯ: Вкажіть URL вашого бекенду
-        const API_URL = 'http://localhost:3000/api'; // ЗАЛИШИВ ЛОКАЛЬНИЙ URL ЯК У ВИХІДНОМУ ФАЙЛІ
+        // ОНОВЛЕНО: Використовується ваше посилання на Render
+        const API_URL = 'https://chess-2pyz.onrender.com/api'; 
         const ADMIN_PASSWORD = 'chess2024'; // Ваш пароль
 
         let isLoggedIn = false;
@@ -735,7 +736,6 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
         
-        // ВИПРАВЛЕНО: Додано перевірку if (btn) для запобігання помилки TypeError
         function disableButton(btnId) {
             const btn = document.getElementById(btnId);
             if (btn) {
@@ -744,7 +744,6 @@
             }
         }
 
-        // ВИПРАВЛЕНО: Додано перевірку if (btn) для запобігання помилки TypeError
         function enableButton(btnId, text) {
             const btn = document.getElementById(btnId);
             if (btn) {
