Final: Update API URL to Render domain

--- a/admin.html
+++ b/admin.html
@@ -529,7 +529,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <h1>🎯 Панель Керування</h1>
+            <h1>Панель Керування</h1>
             <button id="logoutBtn" class="logout-btn" style="display: none;">Вийти</button>
         </div>
     </div>
