Final: Update API URL to Render domain

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+    <meta name="google-site-verification" content="TPM2MI2JyVnID3VGQVfz3213uBfvg3tXmtyRKQiy970" />
+    <meta name="description" content="Сайт шахової групи Волошинського Любомира КЗ ДЮСШ «Дебют». Актуальні новини, домашнє завдання, списки гуртка та результати турнірів.">
+    <meta name="keywords" content="шахи, ДЮСШ Дебют, Волошинський Любомир, шаховий гурток, шахові турніри, домашнє завдання шахи">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>КЗ ДЮСШ "Дебют"</title>
